--- a/GameOfLife/GameOfLife.csproj
+++ b/GameOfLife/GameOfLife.csproj
@@ -54,11 +54,12 @@
     <Compile Include="CustomPanel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="FormSettings.cs">
+    <Compile Include="Drawer.cs" />
+    <Compile Include="FormControlPanel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormSettings.Designer.cs">
-      <DependentUpon>FormSettings.cs</DependentUpon>
+    <Compile Include="FormControlPanel.Designer.cs">
+      <DependentUpon>FormControlPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Game.cs" />
     <Compile Include="FormMain.cs">
@@ -68,10 +69,12 @@
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="GraphicsExtensions.cs" />
+    <Compile Include="HitTestInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParallelEngine.cs" />
     <Compile Include="Storage.cs" />
+    <Compile Include="Paterns.cs" />
     <Compile Include="ZoomBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -81,8 +84,8 @@
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormSettings.resx">
-      <DependentUpon>FormSettings.cs</DependentUpon>
+    <EmbeddedResource Include="FormControlPanel.resx">
+      <DependentUpon>FormControlPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
